tests/examples/bad/duplicate_attribute.lat
int main() {
    return 1;
}

class A {
    int a;
    int b;
    int a;
}